# reel-gen-agent

./: .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  analysis.md  pyproject.toml  requirements.txt  retro.md
demo/: sample_input_1.json  sample_input_2.json  sample_input_3.json  sample_input_4.json  sample_input_5.json  sample_input_6.json  sample_input_7.json
demo/results/sample1_from_kling_i2v/: report.md  run.json  upload.md
demo/results/sample2_from_kling_i2v/: report.md  run.json  similarity.json  upload.md
demo/results/sample2_from_kling_r2v/: report.md  run.json  similarity.json  upload.md
demo/results/sample2_from_veo/: report.md  run.json  upload.md
demo/results/sample3_from_kling_i2v/: report.md  run.json  similarity.json  upload.md
demo/results/sample3_from_veo/: report.md  run.json  upload.md
demo/results/sample4_from_kling_i2v/: report.md  run.json  upload.md
demo/results/sample5_from_kling_i2v/: report.md  run.json  upload.md
docs/: Retrospective.md  ToolnModels.md  analysis.md  architecture.md  hook-insight.md  pipeline-design.md  refer-insight.md  references.md  rubric.md
docs/superpowers/plans/: 2026-07-01-execute-replan.md  2026-07-01-execute-stage.md  2026-07-01-plan-stage.md
docs/superpowers/specs/: 2026-07-01-ken-burns-motion-design.md  2026-07-01-music-last-plan-step-design.md  2026-07-01-report-cost-estimate-design.md  2026-07-01-verify-repair-loop-design.md
specs/: ADR.md  ai-model-records.md  conformance-gate.md  hook-generator.md  information-schema.md  logging-strategy.md  multishot-segments.md  prd.md  product-design.md  product-source.md  project-brief.md  replan.md  rubric.md  similarity-loop.md  testing-strategy.md  trd.md  workflows.md
src/reel_gen_agent/: cli.py
tests/: test_analysis.py  test_analyze_merge.py  test_assemble.py  test_asset_bible.py  test_audio.py  test_character.py  test_chat_intake.py  test_cli_replan.py  test_conformance.py  test_cost.py  test_describe_report.py  test_environment.py  test_execute_repair.py  test_fal_video.py  test_gates.py  test_genai_backend.py  test_generation_schema.py  test_hook.py  test_image_client.py  test_intake.py  test_ken_burns.py  test_materials.py  test_music.py  test_narration_budget.py  test_planning_graph.py  test_product.py  test_product_brief.py  test_product_source.py  test_production_graph.py  test_production_plan.py  test_profile_assembly.py  test_reference_seed.py  test_repair.py  test_replan_graph.py  test_rubric.py  test_run_context.py  test_run_paths.py  test_run_replan.py  test_similarity.py  test_stills.py  (+6 more)
utils/: add-reference.sh  build-reference-reelprofile.py  fill-storyboard.py
(+65 files in other folders)
