[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-gen-agent"
version = "0.1.0"
description = "Analyze reference short-form videos and generate new vertical ad reels (CLI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "shalomeir" }]
keywords = ["video", "short-form", "reel", "generative-ai", "gemini", "ffmpeg", "cli"]

dependencies = [
    "google-genai>=1.60",
    "scenedetect>=0.6",
    "librosa>=0.10",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
reel-gen = "reel_gen_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
