[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-gen-agent"
version = "0.1.0"
description = "Analyze reference short-form videos and generate new vertical ad reels (CLI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "shalomeir" }]
keywords = ["video", "short-form", "reel", "generative-ai", "gemini", "ffmpeg", "cli"]

dependencies = [
    "anthropic>=0.40",
    "elevenlabs>=1.9",
    "fal-client>=0.7",
    "firecrawl-py>=1.0",
    "google-genai>=1.60",
    "google-cloud-storage>=2.18",
    "langfuse>=2.52",
    "langgraph>=0.2",
    "moviepy>=2.0",
    "scenedetect>=0.6",
    "librosa>=0.10",
    "numba>=0.60",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pillow>=10.0",
    "pilmoji>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "tenacity>=8.2",
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
reel-gen = "reel_gen_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle(E/W), pyflakes(F), isort(I), pyupgrade(UP), bugbear(B)
select = ["E", "W", "F", "I", "UP", "B"]
# 줄 길이는 포매터가 담당. E501은 프롬프트·URL 문자열에서 오탐이 잦아 끈다.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true   # cv2/librosa/scenedetect 등은 타입 스텁 없음
check_untyped_defs = true
